# operator

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
resources/: AppIcon.icns  Info.plist
script/: build-release  create-dmg
src/: README.md  actions.rs  app.rs  command_center.rs  main.rs  panic_hook.rs  recent_projects.rs  right_panel.rs  session.rs  text_input.rs  updater.rs  util.rs
src/debug/: debug_panel.rs  metrics.rs  mod.rs
src/editor/: README.md  editor_view.rs  file_tree.rs  file_viewer.rs  mod.rs  syntax.rs
src/git/: README.md  diff_model.rs  diff_view.rs  git_repo.rs  github.rs  markdown.rs  mod.rs  pr_diff_view.rs
src/pane/: README.md  mod.rs  pane.rs  pane_group.rs
src/settings/: README.md  mod.rs  settings_panel.rs
src/tab/: README.md  mod.rs  tab.rs  tab_bar.rs
src/terminal/: README.md  mod.rs  terminal.rs  terminal_view.rs
src/theme/: README.md  colors.rs
src/ui/: scrollbar.rs
src/workspace/: README.md  mod.rs  pr_review.rs  sidebar.rs  workspace.rs
