[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { version = "0.2", features = ["runtime_shaders"] }
alacritty_terminal = "0.26"
portable-pty = "0.9"
polling = "3"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-json = "0.24"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
shlex = "1"
anyhow = "1"
raw-window-handle = "0.6"
log = "0.4"
env_logger = "0.11"
notify = "7"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.dev]
opt-level = 1       # basic optimization for smooth UI (0 is noticeably laggy)
debug = 0           # skip DWARF — big speed win
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2       # optimize dependencies (they rarely change)

[profile.release]
opt-level = 3
lto = "thin"
strip = true
